Bug 49463 - Do no isolate in case of emergency or severe problems.
Summary: Do no isolate in case of emergency or severe problems.
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Lennart Poettering
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-04 01:50 UTC by Dr. Tilmann Bubeck
Modified: 2013-04-02 03:58 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Patch to solve the problem. (2.06 KB, application/octet-stream)
2012-05-04 01:50 UTC, Dr. Tilmann Bubeck
Details

Description Dr. Tilmann Bubeck 2012-05-04 01:50:54 UTC
Created attachment 61013 [details]
Patch to solve the problem.

This patch changes local-fs.target and systemd-fsck to not use
"isolate" when going into emergency.
This fixes https://bugzilla.redhat.com/show_bug.cgi?id=810722

The motivation is, that when something wents wrong, we should
keep everything as it is, to let the user fix the problem. When
isolating we stop a lot of services and therefore change the
system heavily so that it gets harder for the user to fix.

An example is a crypted partition. When the fsck in a crypted
partition fails, it previously used "emergency/start/isolate"
which stops cryptsetup. Therefore if the user tries to fsck
e.g. /dev/mapper/luks-356c20ae-c7a2-4f1c-ae1d-1d290a91b691
as printed by the failing fsck, then it will not find this
device (because it got closed).

So please apply this patch to let the user see the failing
situation.

Thanks!
Comment 1 Zbigniew Jedrzejewski-Szmek 2013-04-02 03:58:38 UTC
Patch applied in cgit.freedesktop.org/systemd/systemd/commit/?id=80cfe9e1.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.